--- a/jett.html
+++ b/jett.html
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/jett/jett-bg.jpg');
+    background-image: url('jett/jett-bg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -82,23 +82,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/jett/updraft.png" alt="Updraft">
+                        <img src="jett/updraft.png" alt="Updraft">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/jett/dash.png" alt="Dash">
+                        <img src="jett/dash.png" alt="Dash">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/jett/smoke.png" alt="Smoke">
+                        <img src="jett/smoke.png" alt="Smoke">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/jett/blade-storm.png" alt="Blade Storm">
+                        <img src="jett/blade-storm.png" alt="Blade Storm">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/jett/updraft.mp4" type="video/mp4">
+                <source id="video-source" src="jett/updraft.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -120,8 +120,8 @@ const skillsData = [
     {
         name: "Updraft",
         description: "Instantly propel Jett high into the air.",
-        video: "images/jett/updraft.mp4",
-        img: "images/jett/updraft.png"
+        video: "jett/updraft.mp4",
+        img: "jett/updraft.png"
     },
     {
         name: "Dash",
@@ -132,14 +132,14 @@ const skillsData = [
     {
         name: "Smoke",
         description: "Jett creates a cloud of smoke that blocks vision.",
-        video: "images/jett/smoke.mp4",
-        img: "images/jett/smoke.png"
+        video: "jett/smoke.mp4",
+        img: "jett/smoke.png"
     },
     {
         name: "Blade Storm",
         description: "Jett summons blades to throw at enemies, dealing damage.",
-        video: "images/jett/blade.mp4",
-        img: "images/jett/blade-storm.png"
+        video: "jett/blade.mp4",
+        img: "jett/blade-storm.png"
     }
 ];
 
