--- a/neon.html
+++ b/neon.html
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/neon/bgn.jpg');
+    background-image: url('neon/bgn.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -54,23 +54,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/neon/relay.avif" alt="Updraft">
+                        <img src="neon/relay.avif" alt="Updraft">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/neon/high.avif" alt="Dash">
+                        <img src="neon/high.avif" alt="Dash">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/neon/fast.avif" alt="Smoke">
+                        <img src="neon/fast.avif" alt="Smoke">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/neon/overdrive.avif" alt="Blade Storm">
+                        <img src="neon/overdrive.avif" alt="Blade Storm">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/neon/relay.mp4" type="video/mp4">
+                <source id="video-source" src="neon/relay.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -92,26 +92,26 @@ const skillsData = [
     {
         name: "Relay Bolt",
         description: "Instantly propel Jett high into the air.NSTANTLY throw an energy bolt that bounces once. Upon hitting each surface, the bolt electrifies the ground below with a concussive blast.",
-        video: "images/neon/relay.mp4",
-        img: "images/neon/relay.png"
+        video: "neon/relay.mp4",
+        img: "neon/relay.png"
     },
     {
         name: "High Gear",
         description: "NSTANTLY channel Neon’s power for increased speed. When charged, ALT FIRE to trigger an electric slide. Slide charge resets every two kills.",
-        video: "images/neon/high.mp4",
-        img: "images/neon/high.png"
+        video: "neon/high.mp4",
+        img: "neon/high.png"
     },
     {
         name: "Fast Lane",
         description: "FIRE two energy lines forward on the ground that extend a short distance or until they hit a surface. The lines rise into walls of static electricity that block vision and damage enemies passing through them.",
-        video: "images/neon/fast.mp4",
-        img: "images/neon/fast.png"
+        video: "neon/fast.mp4",
+        img: "neon/fast.png"
     },
     {
         name: "Overdrive",
         description: "Unleash Neon’s full power and speed for a short duration. FIRE to channel the power into a deadly lightning beam with high movement accuracy. The duration resets on each kill.",
-        video: "images/neon/overdrive.mp4",
-        img: "images/neon/overdrive.png"
+        video: "neon/overdrive.mp4",
+        img: "neon/overdrive.png"
     }
 ];
 
