--- a/phoenix.html
+++ b/phoenix.html
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/phoenix/phoenix.jpg');
+    background-image: url('phoenix/phoenix.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -82,23 +82,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/phoenix/blind.avif" alt="Blaze">
+                        <img src="phoenix/blind.avif" alt="Blaze">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/phoenix/flash.avif" alt="Curveball">
+                        <img src="phoenix/flash.avif" alt="Curveball">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/phoenix/ignite.avif" alt="Hot Hands">
+                        <img src="phoenix/ignite.avif" alt="Hot Hands">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/phoenix/ult.avif" alt="Run It Back">
+                        <img src="phoenix/ult.avif" alt="Run It Back">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/phoenix/blind.mp4" type="video/mp4">
+                <source id="video-source" src="phoenix/blind.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -120,26 +120,26 @@ const skillsData = [
     {
         name: "C - Blaze",
         description: "EQUIP a wall of fire that blocks vision and damages anyone passing through it. The wall can be curved by holding the fire button to create tactical obstacles.",
-        video: "images/phoenix/blind.mp4",
-        img: "images/phoenix/blind.png"
+        video: "phoenix/blind.mp4",
+        img: "phoenix/blind.png"
     },
     {
         name: "Q - Curveball",
         description: "EQUIP a flashbang that can be thrown around corners to blind enemies. The flashbang bounces off surfaces, making it easier to surprise enemies or block their vision.",
-        video: "images/phoenix/flash.mp4",
-        img: "images/phoenix/flash.png"
+        video: "phoenix/flash.mp4",
+        img: "phoenix/flash.png"
     },
     {
         name: "E - Hot Hands",
         description: "EQUIP a fireball that deals damage to enemies but also heals Phoenix. FIRE to throw the fireball at enemies, or use it on yourself to heal and continue fighting.",
-        video: "images/phoenix/ignite.mp4",
-        img: "images/phoenix/ignite.png"
+        video: "phoenix/ignite.mp4",
+        img: "phoenix/ignite.png"
     },
     {
         name: "X - Run It Back (Ultimate)",
         description: "ACTIVATE to place a marker at Phoenix’s current location. If Phoenix is killed while in the marker’s area, he is revived at the marker with full health.",
-        video: "images/phoenix/ult.mp4",
-        img: "images/phoenix/ult.png"
+        video: "phoenix/ult.mp4",
+        img: "phoenix/ult.png"
     }
 ];
 
