--- a/raze.html
+++ b/raze.html
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/raze/raze-bg.jpg');
+    background-image: url('raze/raze-bg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -82,23 +82,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/raze/satch.avif" alt="Updraft">
+                        <img src="raze/satch.avif" alt="Updraft">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/raze/nade.avif" alt="Dash">
+                        <img src="raze/nade.avif" alt="Dash">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/raze/boom.avif" alt="Smoke">
+                        <img src="raze/boom.avif" alt="Smoke">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/raze/ult.avif" alt="Blade Storm">
+                        <img src="raze/ult.avif" alt="Blade Storm">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/raze/satch.mp4" type="video/mp4">
+                <source id="video-source" src="raze/satch.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -120,26 +120,26 @@ const skillsData = [
     {
         name: "Blask Pack",
         description: "INSTANTLY throw a Blast Pack that will stick to surfaces. RE-USE the ability after deployment to detonate, damaging and moving anything hit. Raze isn't damaged by this ability, but will still take fall damage if launched up far enough.",
-        video: "images/raze/satch.mp4",
-        img: "images/raze/satch.png"
+        video: "raze/satch.mp4",
+        img: "raze/satch.png"
     },
     {
         name: "Paint Shells",
         description: "EQUIP a cluster grenade. FIRE to throw the grenade, which does damage and creates sub-munitions, each doing damage to anyone in their range. ALT FIRE to lob. Paint Shells charge resets every two kills.",
-        video: "images/raze/nade.mp4",
-        img: "images/raze/nade.png"
+        video: "raze/nade.mp4",
+        img: "raze/nade.png"
     },
     {
         name: "Boom Bot",
         description: "EQUIP a Boom Bot. FIRE will deploy the bot, causing it to travel in a straight line on the ground, bouncing off walls. The Boom Bot will lock on to any enemies in its frontal cone and chase them, exploding for heavy damage if it reaches them.",
-        video: "images/raze/boom.mp4",
-        img: "images/raze/boom.png"
+        video: "raze/boom.mp4",
+        img: "raze/boom.png"
     },
     {
         name: "Showstopper",
         description: "EQUIP a rocket launcher. FIRE to shoot a rocket that does massive area damage on contact with anything.",
-        video: "images/raze/ult.mp4",
-        img: "images/raze/ult.png"
+        video: "raze/ult.mp4",
+        img: "raze/ult.png"
     }
 ];
 
