--- a/reyna.html
+++ b/reyna.html
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/reyna/reynabg.jpg');
+    background-image: url('reyna/reynabg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -82,23 +82,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/reyna/devour.avif" alt="Updraft">
+                        <img src="reyna/devour.avif" alt="Updraft">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/reyna/dismiss.avif" alt="Dash">
+                        <img src="reyna/dismiss.avif" alt="Dash">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/reyna/leer.avif" alt="Smoke">
+                        <img src="reyna/leer.avif" alt="Smoke">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/reyna/empress.avif" alt="Blade Storm">
+                        <img src="reyna/empress.avif" alt="Blade Storm">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/reyna/devour.mp4" type="video/mp4">
+                <source id="video-source" src="reyna/devour.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -120,26 +120,26 @@ const skillsData = [
     {
         name: "Devour",
         description: "Enemies killed by Reyna leave behind Soul Orbs that last 3 seconds. INSTANTLY consume a nearby soul orb, rapidly healing for a short duration. Health gained through this skill exceeding 100 will decay over time. If EMPRESS is active, this skill will automatically cast and not consume the orb.",
-        video: "images/reyna/devour.mp4",
-        img: "images/reyna/devour.png"
+        video: "reyna/devour.mp4",
+        img: "reyna/devour.png"
     },
     {
         name: "Dismiss",
         description: "INSTANTLY consume a nearby soul orb, becoming intangible for a short duration. If EMPRESS is active, also become invisible.",
-        video: "images/reyna/dismiss.mp4",
-        img: "images/reyna/dismiss.png"
+        video: "reyna/dismiss.mp4",
+        img: "reyna/dismiss.png"
     },
     {
         name: "Leer",
         description: "INSTANTLY enter a frenzy, increasing firing speed, equip and reload speed dramatically. Scoring a kill renews the duration.",
-        video: "images/reyna/leer.mp4",
-        img: "images/reyna/leer.png"
+        video: "reyna/leer.mp4",
+        img: "reyna/leer.png"
     },
     {
         name: "Empress",
         description: "INSTANTLY enter a frenzy, increasing firing speed, equip and reload speed dramatically. Scoring a kill renews the duration.",
-        video: "images/reyna/empress.mp4",
-        img: "images/reyna/empress.png"
+        video: "reyna/empress.mp4",
+        img: "reyna/empress.png"
     }
 ];
 
