--- a/sova.html
+++ b/sova.html
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/sova/soba.jpg');
+    background-image: url('sova/soba.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -82,23 +82,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/sova/arrow.avif" alt="Recon Bolt">
+                        <img src="sova/arrow.avif" alt="Recon Bolt">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/sova/eye.avif" alt="Owl Drone">
+                        <img src="sova/eye.avif" alt="Owl Drone">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/sova/shock.avif" alt="Shock Bolt">
+                        <img src="sova/shock.avif" alt="Shock Bolt">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/sova/ult.avif" alt="Hunter's Fury">
+                        <img src="sova/ult.avif" alt="Hunter's Fury">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/sova/arrow.mp4" type="video/mp4">
+                <source id="video-source" src="sova/arrow.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -120,26 +120,26 @@ const skillsData = [
     {
         name: "E - Recon Bolt",
         description: "EQUIP a sonar bolt that sticks to surfaces and pulses, revealing enemy positions in the vicinity. Activate the bolt to send out a pulse that locates enemies behind walls or in hidden areas.",
-        video: "images/sova/arrow.mp4",
-        img: "images/sova/arrow.png"
+        video: "sova/arrow.mp4",
+        img: "sova/arrow.png"
     },
     {
         name: "C - Owl Drone",
         description: "EQUIP a controllable drone that flies through the air and reveals enemy positions. The drone can be piloted to scout areas and tag enemies within its line of sight.",
-        video: "images/sova/eye.mp4",
-        img: "images/sova/eye.png"
+        video: "sova/eye.mp4",
+        img: "sova/eye.png"
     },
     {
         name: "Q - Shock Bolt",
         description: "EQUIP a bolt that deals electrical damage in a small radius. The bolt can be bounced off surfaces to reach difficult places and shock enemies in its area of effect.",
-        video: "images/sova/shock.mp4",
-        img: "images/sova/shock.png"
+        video: "sova/shock.mp4",
+        img: "sova/shock.png"
     },
     {
         name: "X - Hunter's Fury (Ultimate)",
         description: "ACTIVATE to unleash a powerful bow that fires three long-range, piercing energy bolts. These bolts deal damage and mark enemies hit, making them easier to track for the team.",
-        video: "images/sova/ult.mp4",
-        img: "images/sova/ult.png"
+        video: "sova/ult.mp4",
+        img: "sova/ult.png"
     }
 ];
 
