--- a/viper.html
+++ b/viper.html
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/viper/bg.jpg');
+    background-image: url('viper/bg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -82,23 +82,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/viper/poisoncloud.avif" alt="Poison Cloud">
+                        <img src="viper/poisoncloud.avif" alt="Poison Cloud">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/viper/decay.avif" alt="Toxic Screen">
+                        <img src="viper/decay.avif" alt="Toxic Screen">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/viper/chemlauncher.avif" alt="Snake Bite">
+                        <img src="viper/chemlauncher.avif" alt="Snake Bite">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/viper/ultimate.avif" alt="Viper's Pit">
+                        <img src="viper/ultimate.avif" alt="Viper's Pit">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/viper/poisoncloud.mp4" type="video/mp4">
+                <source id="video-source" src="viper/poisoncloud.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -120,26 +120,26 @@ const skillsData = [
     {
         name: "Poison Cloud",
         description: "EQUIP a canister that can be thrown to deploy a cloud of toxic gas. The cloud can be activated remotely to block vision and deal damage over time to enemies caught within it.",
-        video: "images/viper/poisoncloud.mp4",
-        img: "images/viper/poisoncloud.png"
+        video: "viper/poisoncloud.mp4",
+        img: "viper/poisoncloud.png"
     },
     {
         name: "Toxic Screen",
         description: "EQUIP a long line of toxic gas emitters. FIRE to deploy the line, creating a wall of toxic gas that blocks vision and deals damage to enemies passing through it.",
-        video: "images/viper/decay.mp4",
-        img: "images/viper/decay.png"
+        video: "viper/decay.mp4",
+        img: "viper/decay.png"
     },
     {
         name: "Snake Bite",
         description: "FIRE a projectile that explodes on impact, releasing a pool of acid that slows and damages enemies standing in it.",
-        video: "images/viper/chemlauncher.mp4",
-        img: "images/viper/chemlauncher.png"
+        video: "viper/chemlauncher.mp4",
+        img: "viper/chemlauncher.png"
     },
     {
         name: "Viper's Pit",
         description: "ACTIVATE to release a massive toxic cloud that covers a large area. Enemies within the cloud are affected by a constant poison effect, while the area is also obscured by smoke, making it difficult for enemies to see or take action.",
-        video: "images/viper/ultimate.mp4",
-        img: "images/viper/ultimate.png"
+        video: "viper/ultimate.mp4",
+        img: "viper/ultimate.png"
     }
 ];
 
