--- a/yoru.html
+++ b/yoru.html
@@ -14,7 +14,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/yuro/bg.jfif');
+    background-image: url('yuro/bg.jfif');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -82,23 +82,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/yuro/blind.avif" alt="Blindside">
+                        <img src="yuro/blind.avif" alt="Blindside">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/yuro/tp.avif" alt="Teleport">
+                        <img src="yuro/tp.avif" alt="Teleport">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/yuro/clone.avif" alt="Fakeout">
+                        <img src="yuro/clone.avif" alt="Fakeout">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/yuro/ult.avif" alt="Dimensional Rift">
+                        <img src="yuro/ult.avif" alt="Dimensional Rift">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/yuro/blind.mp4" type="video/mp4">
+                <source id="video-source" src="yuro/blind.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -120,26 +120,26 @@ const skillsData = [
     {
         name: "Q - Blindside",
         description: "EQUIP to rip an unstable dimensional fragment from reality. FIRE to throw the fragment, activating a flash that winds up once it collides with a hard surface in the world.",
-        video: "images/yuro/blind.mp4",
-        img: "images/yuro/blind.png"
+        video: "yuro/blind.mp4",
+        img: "yuro/blind.png"
     },
     {
         name: "E - Gatecrash (Teleport)",
         description: "EQUIP to send a fragment through a rift in reality. FIRE to teleport to the fragment's location after a short delay, allowing Yoru to reposition or surprise enemies.",
-        video: "images/yuro/tp.mp4",
-        img: "images/yuro/tp.png"
+        video: "yuro/tp.mp4",
+        img: "yuro/tp.png"
     },
     {
         name: "C - Fakeout",
         description: "EQUIP to send a decoy into enemy territory. FIRE to make it move forward, deceiving enemies into thinking it’s a real Yoru.",
-        video: "images/yuro/clone.mp4",
-        img: "images/yuro/clone.png"
+        video: "yuro/clone.mp4",
+        img: "yuro/clone.png"
     },
     {
         name: "X - Dimensional Rift (Ultimate)",
         description: "ACTIVATE to tear a hole into another dimension, allowing Yoru to see and move freely while being untouchable. Enemies can’t see him, giving him the ultimate surprise attack.",
-        video: "images/yuro/ult.mp4",
-        img: "images/yuro/ult.png"
+        video: "yuro/ult.mp4",
+        img: "yuro/ult.png"
     }
 ];
 
