--- a/iso.html
+++ b/iso.html
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/iso/bg.jpg');
+    background-image: url('iso/bg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -81,23 +81,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/iso/timewarp.avif" alt="Time Warp">
+                        <img src="iso/timewarp.avif" alt="Time Warp">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/iso/chrono.avif" alt="Chrono Field">
+                        <img src="iso/chrono.avif" alt="Chrono Field">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/iso/pulse.avif" alt="Energy Pulse">
+                        <img src="iso/pulse.avif" alt="Energy Pulse">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/iso/ult.avif" alt="Temporal Rift">
+                        <img src="iso/ult.avif" alt="Temporal Rift">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/iso/timewarp.mp4" type="video/mp4">
+                <source id="video-source" src="iso/timewarp.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -119,26 +119,26 @@ const skillsData = [
     {
         name: "Undercut",
         description: "EQUIP a molecular bolt. Fire to throw it forward, applying a brief FRAGILE to all players it touches. The bolt can pass through solid objects, including walls.",
-        video: "images/iso/timewarp.mp4",
-        img: "images/iso/timewarp.png"
+        video: "iso/timewarp.mp4",
+        img: "iso/timewarp.png"
     },
     {
         name: "Double Tap",
         description: "START a focus timer. Once completed, enter a flow state during which downed enemies you kill or damage generate an energy orb. Shooting this orb grants you a shield which absorbs one instance of damage from any source.",
-        video: "images/iso/chrono.mp4",
-        img: "images/iso/chrono.png"
+        video: "iso/chrono.mp4",
+        img: "iso/chrono.png"
     },
     {
         name: "Contingency",
         description: "EQUIP to assemble prismatic energy. FIRE to push an indestructible wall of energy forward that blocks bullets.",
-        video: "images/iso/pulse.mp4",
-        img: "images/iso/pulse.png"
+        video: "iso/pulse.mp4",
+        img: "iso/pulse.png"
     },
     {
         name: "Kill Contract",
         description: "EQUIP an interdimensional arena. FIRE to hurl a column of energy through the battlefield, pulling you and the first enemy hit into the arena. You and your opponent duel to the death.",
-        video: "images/iso/ult.mp4",
-        img: "images/iso/ult.png"
+        video: "iso/ult.mp4",
+        img: "iso/ult.png"
     }
 ];
 
