--- a/killjoy.html
+++ b/killjoy.html
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/killjoy/bg.jpg');
+    background-image: url('killjoy/bg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -82,23 +82,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/killjoy/nanoswarm.avif" alt="Nanoswarm">
+                        <img src="killjoy/nanoswarm.avif" alt="Nanoswarm">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/killjoy/sentry.avif" alt="Sentry">
+                        <img src="killjoy/sentry.avif" alt="Sentry">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/killjoy/lockdown.avif" alt="Lockdown">
+                        <img src="killjoy/lockdown.avif" alt="Lockdown">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/killjoy/ultimate.avif" alt="Lockdown (Ultimate)">
+                        <img src="killjoy/ultimate.avif" alt="Lockdown (Ultimate)">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/killjoy/nanoswarm.mp4" type="video/mp4">
+                <source id="video-source" src="killjoy/nanoswarm.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -120,26 +120,26 @@ const skillsData = [
     {
         name: "Nanoswarm",
         description: "EQUIP a grenade that, when activated, explodes to release a damaging gas cloud that deals significant damage to enemies within its radius.",
-        video: "images/killjoy/nanoswarm.mp4",
-        img: "images/killjoy/nanoswarm.png"
+        video: "killjoy/nanoswarm.mp4",
+        img: "killjoy/nanoswarm.png"
     },
     {
         name: "Sentry Turret",
         description: "EQUIP a turret that automatically detects and fires at nearby enemies. It slows them down and provides valuable intel on enemy locations.",
-        video: "images/killjoy/sentry.mp4",
-        img: "images/killjoy/sentry.png"
+        video: "killjoy/sentry.mp4",
+        img: "killjoy/sentry.png"
     },
     {
         name: "Alarmbot",
         description: "EQUIP a large device that can be deployed to send out a pulse. Enemies caught in its range are slowed and eventually stunned, leaving them vulnerable.",
-        video: "images/killjoy/lockdown.mp4",
-        img: "images/killjoy/lockdown.png"
+        video: "killjoy/lockdown.mp4",
+        img: "killjoy/lockdown.png"
     },
     {
         name: "Lockdown (Ultimate)",
         description: "ACTIVATE to deploy a massive device that emits a pulse over a large area. Enemies hit by the pulse are slowed and then stunned, allowing you to easily capitalize on their vulnerability.",
-        video: "images/killjoy/ultimate.mp4",
-        img: "images/killjoy/ultimate.png"
+        video: "killjoy/ultimate.mp4",
+        img: "killjoy/ultimate.png"
     }
 ];
 
