--- a/sage.html
+++ b/sage.html
@@ -13,7 +13,7 @@
     justify-content: center;
     align-items: center;
     padding: 40px;
-    background-image: url('images/sage/sagebg.jpg');
+    background-image: url('sage/sagebg.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -82,23 +82,23 @@
             <div class="skills-selector">
                 <div class="skills-list">
                     <div class="skill-item" onclick="changeSkill(0)">
-                        <img src="images/sage/heal.avif" alt="Healing Orb">
+                        <img src="sage/heal.avif" alt="Healing Orb">
                     </div>
                     <div class="skill-item" onclick="changeSkill(1)">
-                        <img src="images/sage/barrier.avif" alt="Barrier Orb">
+                        <img src="sage/barrier.avif" alt="Barrier Orb">
                     </div>
                     <div class="skill-item" onclick="changeSkill(2)">
-                        <img src="images/sage/slow.avif" alt="Slow Orb">
+                        <img src="sage/slow.avif" alt="Slow Orb">
                     </div>
                     <div class="skill-item" onclick="changeSkill(3)">
-                        <img src="images/sage/ult.avif" alt="Resurrection">
+                        <img src="sage/ult.avif" alt="Resurrection">
                     </div>
                 </div>
             </div>
         </div>
         <div class="skills-display">
             <video id="skill-video" controls>
-                <source id="video-source" src="images/sage/heal.mp4" type="video/mp4">
+                <source id="video-source" src="sage/heal.mp4" type="video/mp4">
                 Your browser does not support the video tag.
             </video>
             <div class="skill-details">
@@ -120,26 +120,26 @@ const skillsData = [
     {
         name: "C - Healing Orb",
         description: "EQUIP a Healing Orb that heals allies over time when used. FIRE to heal yourself or teammates, providing recovery from damage to help hold positions or prepare for the next battle.",
-        video: "images/sage/heal.mp4",
-        img: "images/sage/heal.png"
+        video: "sage/heal.mp4",
+        img: "sage/heal.png"
     },
     {
         name: "Q - Barrier Orb",
         description: "EQUIP a Barrier Orb. FIRE to deploy a wall that can block vision and slow enemies in its path, creating space for your team to push or hold strategic points.",
-        video: "images/sage/barrier.mp4",
-        img: "images/sage/barrier.png"
+        video: "sage/barrier.mp4",
+        img: "sage/barrier.png"
     },
     {
         name: "E - Slow Orb",
         description: "EQUIP a Slow Orb. FIRE to deploy an orb that slows down enemies who step on it, giving your team a major advantage in positioning and timing during fights.",
-        video: "images/sage/slow.mp4",
-        img: "images/sage/slow.png"
+        video: "sage/slow.mp4",
+        img: "sage/slow.png"
     },
     {
         name: "X - Resurrection (Ultimate)",
         description: "ACTIVATE to resurrect a dead teammate, bringing them back to life and allowing them to rejoin the fight. This powerful ability can turn the tide of a round and give your team another chance.",
-        video: "images/sage/ult.mp4",
-        img: "images/sage/ult.png"
+        video: "sage/ult.mp4",
+        img: "sage/ult.png"
     }
 ];
 
